[gd_scene load_steps=40 format=3 uid="uid://csntg42ps0ogc"]

[ext_resource type="PackedScene" uid="uid://biotlhx7rd3hp" path="res://entities/orb/orb.tscn" id="1_symyc"]
[ext_resource type="Script" uid="uid://c22tsr6r03flk" path="res://entities/player/player.gd" id="2_abrql"]
[ext_resource type="Shader" uid="uid://b1geqjqhk6fmn" path="res://entities/rotsprite.gdshader" id="3_8fjmc"]
[ext_resource type="Texture2D" uid="uid://8d6ive5cjagj" path="res://entities/player/bubble_back.png" id="3_bls4j"]
[ext_resource type="Texture2D" uid="uid://bjsh7303ticie" path="res://entities/player/lupin.png" id="4_8fjmc"]
[ext_resource type="Texture2D" uid="uid://djfor7opcbqdj" path="res://entities/smoke.png" id="4_a1qjk"]
[ext_resource type="Texture2D" uid="uid://dj45pvpacwsv7" path="res://entities/player/bubble_front.png" id="4_fkugw"]
[ext_resource type="Texture2D" uid="uid://dcrcecryobrox" path="res://entities/player/lupin_the_3rd.png" id="6_26q78"]
[ext_resource type="AudioStream" uid="uid://c28lsegwqbdun" path="res://entities/player/death.wav" id="7_qiwj3"]
[ext_resource type="AudioStream" uid="uid://c7tkk5uuhunm" path="res://entities/player/latch.wav" id="9_wvtmh"]
[ext_resource type="AudioStream" uid="uid://do3erdk6b4o7s" path="res://entities/player/delatch.wav" id="10_7thud"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fkugw"]
resource_local_to_scene = true
radius = 12.0

[sub_resource type="Gradient" id="Gradient_j3ovn"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_a1qjk"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a1qjk"]
shader = ExtResource("3_8fjmc")
shader_parameter/pixel_scale = 1.0
shader_parameter/enable_mod = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j3ovn"]
shader = ExtResource("3_8fjmc")
shader_parameter/pixel_scale = 1.0
shader_parameter/enable_mod = false

[sub_resource type="AtlasTexture" id="AtlasTexture_eyb6c"]
atlas = ExtResource("4_8fjmc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_221hk"]
atlas = ExtResource("4_8fjmc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghoj8"]
atlas = ExtResource("6_26q78")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1t22"]
atlas = ExtResource("6_26q78")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghoj8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyb6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_221hk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghoj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1t22")
}],
"loop": true,
"name": &"third",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_afbqv"]
shader = ExtResource("3_8fjmc")
shader_parameter/pixel_scale = 1.0
shader_parameter/enable_mod = true

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjmc"]
atlas = ExtResource("4_fkugw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiwj3"]
atlas = ExtResource("4_fkugw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26q78"]
atlas = ExtResource("4_fkugw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bectd"]
atlas = ExtResource("4_fkugw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvtmh"]
atlas = ExtResource("4_fkugw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7thud"]
atlas = ExtResource("4_fkugw")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qjk"]
atlas = ExtResource("4_fkugw")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ovn"]
atlas = ExtResource("4_fkugw")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afbqv"]
atlas = ExtResource("4_fkugw")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx6sm"]
atlas = ExtResource("4_fkugw")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqrof"]
atlas = ExtResource("4_fkugw")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wlsy"]
atlas = ExtResource("4_fkugw")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2kln"]
atlas = ExtResource("4_fkugw")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_we0b7"]
atlas = ExtResource("4_fkugw")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtric"]
atlas = ExtResource("4_fkugw")
region = Rect2(832, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_eyb6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26q78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bectd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvtmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7thud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ovn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afbqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx6sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqrof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wlsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2kln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we0b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtric")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"pop",
"speed": 18.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8fjmc"]
radius = 8.5

[node name="Player" groups=["player"] instance=ExtResource("1_symyc")]
mass = 0.75
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("2_abrql")
rotation_factor = 0.95
trajectory_steps = 96
trajectory_step_size = 0.0166667
trajectory_line_steps = 4
unlatched_gravitation = 0.15
unlatching_boost = 1.1
unlatching_time = 2.0
arcs = 12
arc_divisions = 8
radius = 8.0

[node name="Sprite" parent="." index="0"]
visible = false

[node name="CollisionShape" parent="." index="1"]
visible = false
shape = SubResource("CircleShape2D_fkugw")

[node name="Sprites" type="Node2D" parent="." index="2"]

[node name="LatchSmoke" type="CPUParticles2D" parent="Sprites" index="0"]
emitting = false
amount = 16
texture = ExtResource("4_a1qjk")
lifetime = 0.35
one_shot = true
explosiveness = 0.3
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.61
color = Color(1, 0, 0, 1)
color_ramp = SubResource("Gradient_j3ovn")

[node name="DelatchSmoke" type="CPUParticles2D" parent="Sprites" index="1"]
emitting = false
texture = ExtResource("4_a1qjk")
lifetime = 0.25
one_shot = true
explosiveness = 0.3
direction = Vector2(-1, 0)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.61
color_ramp = SubResource("Gradient_a1qjk")

[node name="Back" type="Sprite2D" parent="Sprites" index="2"]
material = SubResource("ShaderMaterial_a1qjk")
texture = ExtResource("3_bls4j")

[node name="Lupin" type="AnimatedSprite2D" parent="Sprites" index="3"]
material = SubResource("ShaderMaterial_j3ovn")
sprite_frames = SubResource("SpriteFrames_ghoj8")
autoplay = "default"
flip_h = true

[node name="Front" type="AnimatedSprite2D" parent="Sprites" index="4"]
material = SubResource("ShaderMaterial_afbqv")
sprite_frames = SubResource("SpriteFrames_eyb6c")
autoplay = "default"

[node name="TrajectoryProbe" parent="." index="3" groups=["player"] instance=ExtResource("1_symyc")]
visible = false
collision_layer = 0
collision_mask = 0
active = false
radius = 8.0

[node name="DangerArea" type="Area2D" parent="." index="4"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="DangerArea" index="0"]
shape = SubResource("CircleShape2D_8fjmc")

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource("7_qiwj3")

[node name="LatchAudio" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource("9_wvtmh")

[node name="DelatchAudio" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource("10_7thud")

[connection signal="die" from="." to="." method="_on_die"]
[connection signal="body_entered" from="DangerArea" to="." method="_on_danger_body_enter"]
[connection signal="finished" from="DeathAudio" to="." method="_on_death_audio_finished"]
